inku/xode-server/examples/ing-nginx-https.yaml
apiVersion: v1
kind: Pod
metadata:
  name: xidunku-xode-server
  labels:
    app: xidunku-xode-server
spec:
  terminationGracePeriodSeconds: 0
  volumes:
    - name: hostdir
      hostPath:
        # 這個目錄會掛在內部 /home/coder/project
        path: /tmp
        type: Directory
  containers:
    - name: code-server
      image: localhost:32000/xidunku-xode-server
      ports:
        - name: web
          containerPort: 8443
      #
      # https://github.com/cdr/code-server/blob/master/src/node/cli.ts
      #
      #command:
      #  - /bin/bash
      #args:
      #  - -c
      #  - |
      #    dumb-init code-server --host 0.0.0.0 --port 8080
      volumeMounts:
        - name: hostdir
          mountPath: /home/coder/project
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: xidunku-xode-server

spec:
  ports:
    - protocol: TCP
      name: web
      port: 443
      targetPort: 8443
  selector:
    app: xidunku-xode-server

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: xidunku-xode-server-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    #
    #
    # https proxy https 不需要 proxy-redirect-to
    # rewrite header Location http://host/xxx to https://host/xxx
    #
    # nginx.ingress.kubernetes.io/proxy-redirect-from: http://$host/
    # nginx.ingress.kubernetes.io/proxy-redirect-to: /
    # 
    # [NGINX Docs | Securing HTTP Traffic to Upstream Servers](https://docs.nginx.com/nginx/admin-guide/security-controls/securing-http-traffic-upstream/)
    # TODO
    # nginx.ingress.kubernetes.io/proxy-ssl-secret: secretName
spec:
  #
  # TLS/HTTPS - NGINX Ingress Controller https://kubernetes.github.io/ingress-nginx/user-guide/tls/
  # The default certificate will also be used for ingress tls: sections that do not have a secretName option.
  #
  tls:
    - hosts:
        - xode-server-192-168-2-106.nip.io
  rules:
    - host: xode-server-192-168-2-106.nip.io
      http:
        paths:
          - backend:
              serviceName: xidunku-xode-server
              servicePort: 443
