inku/xode-server/examples/prod-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: xidunku-xode-server
  labels:
    app: xidunku-xode-server
spec:
  terminationGracePeriodSeconds: 0
  volumes:
    - name: hostdir
      hostPath:
        # 這個目錄會掛在內部 /home/coder/project
        path: /tmp
        type: Directory
  containers:
    - name: code-server
      image: docker.io/dltdojo/xidunku-xode-server
      ports:
        - name: web
          containerPort: 8443
      #
      # https://github.com/cdr/code-server/blob/master/src/node/cli.ts
      #
      command:
        - /bin/bash
      args:
        - -c
        - |
          dumb-init code-server --host 0.0.0.0 --port 8443 --cert
      volumeMounts:
        - name: hostdir
          mountPath: /home/coder/project
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: xidunku-xode-server

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8443
  selector:
    app: xidunku-xode-server

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: xidunku-xode-server-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  #
  # TLS/HTTPS - NGINX Ingress Controller https://kubernetes.github.io/ingress-nginx/user-guide/tls/
  # The default certificate will also be used for ingress tls: sections that do not have a secretName option.
  #
  tls:
    - hosts:
        - xode-server-34-69-163-127.nip.io
  rules:
    - host: xode-server-34-69-163-127.nip.io
      http:
        paths:
          - backend:
              serviceName: xidunku-xode-server
              servicePort: 8443
